Finished first draft of enlarged memory map!