@@ -61,20 +61,26 @@
 	<build>
 		<sourceDirectory>src/main/kotlin</sourceDirectory>
 		<plugins>
-			<plugin>
+<!--			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
 					<release>${java.version}</release>
+					<compilerArgs>
+						<arg>&#45;&#45;add-exports java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+					</compilerArgs>
 				</configuration>
-			</plugin>
+			</plugin>-->
 			<plugin>
 				<groupId>org.openjfx</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>0.0.5</version>
 				<configuration>
 					<mainClass>de.dude.timetracker.App</mainClass>
+					<options>
+						<option>--add-exports java.base/jdk.internal.misc=ALL-UNNAMED</option>
+					</options>
 				</configuration>
 				<executions>
 					<execution>
